# nosp-dashboard

./: .env.local.example  .gitignore  NOSP_주간업데이트.bat  README.md  package.json  pnpm-lock.yaml  vercel.json  브랜드크롤링.bat  브랜드크롤링_NULL.bat
worker/: README.md  pyproject.toml
worker/scripts/: README-brands.md  add_detected_slot_count_col.py  add_displayname_col.py  add_search_keyword_col.py  analyze_miss_pattern.py  apply_brand_cleanup_xlsx.py  check_brand_rounds.py  check_ivenet.py  check_lina.py  check_sv_ganbyung.py  check_sv_unjeon.py  cleanup_and_check.py  cleanup_unverified_brands.py  debug_ganbyung.py  dedupe_broken_brands.py  diag_brand_cleanup_pattern.py  diag_brand_hosts.py  diag_remaining_cleanup.py  dump_canonical_hosts.py  export_brand_audit.py  export_brand_cleanup.py  find_overseas_travel.py  find_short_travel.py  force_rescrape_np_active.py  force_scrape.py  inspect_mobile.py  inspect_mobile_detail.py  inspect_naver.py  inspect_naver2.py  probe_dot_dom.py  reconcile_brands.py  rescrape_cancer_insurance.py  rescrape_overseas_travel.py  rescrape_rashguard.py  rescrape_short_travel.py  rescrape_travel_insurance.py  reset_dawn_zero_scrapes.py  reset_high_bid_zero_scrapes.py  reset_zero_brand_scrapes.py  schema_check.py  (+8 more)
worker/src/worker/: backfill.py  config.py  csv_parsers.py  db.py  ingest.py  logging.py  models.py  upsert.py  (+1 more)
worker/tests/: conftest.py  test_backfill.py  test_brand_match.py  test_brand_scrape_e2e.py  test_csv_parsers.py  test_ingest_end_to_end.py  test_ingest_runs.py  test_landing.py  test_smoke.py  test_upsert.py  test_watcher.py
(+198 files in other folders)
