[project]
name = "worker"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "psycopg[binary]>=3.2",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "structlog>=24.4",
  "watchdog>=5.0",
  "python-dotenv>=1.0",
  "rapidfuzz>=3.10",
  "playwright>=1.48",
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.7",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "db: tests that require a real DATABASE_URL",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
